--- a/src/input.css
+++ b/src/input.css
@@ -8,7 +8,12 @@
   box-sizing: border-box;
 }
 
-.modal-window.active {
+.add-modal-window.active {
+  transform: scale(1);
+  transform: translateY(0);
+}
+
+.edit-modal-window.active {
   transform: scale(1);
   transform: translateY(0);
 }
@@ -22,9 +27,11 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  height: 200vh;
+  background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(1px);
   z-index: 5;
   border-radius: 15px;
