--- a/src/input.css
+++ b/src/input.css
@@ -30,11 +30,10 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 200vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(2px);
   z-index: 5;
-  border-radius: 15px;
 }
 
 .hidden {
