--- a/src/input.css
+++ b/src/input.css
@@ -14,13 +14,12 @@
 }
 
 .edit-modal-window.active {
-  transform: scale(1);
   transform: translateY(0);
+  display: flex;
 }
 
 .delete-modal-window.active {
   transform: scale(1);
-  transform: translateY(0);
 }
 
 .overlay {
@@ -29,8 +28,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+
+  height: 650vh;
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(2px);
   z-index: 5;
@@ -38,6 +39,10 @@
 
 .hidden {
   display: none;
+}
+
+edit-form.active {
+  display: flex;
 }
 
 input:focus,
